# webapi-cicd

./: .dockerignore  .env.example  IMPROVEMENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/core/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py  middleware.py
app/models/: schemas.py
requirements/: base.txt  dev.txt  prod.txt
tests/: conftest.py  test_main.py
